fixes for header on mobile and badge position on homescreen

--- a/themes/the-dream-bed/css/custom.css
+++ b/themes/the-dream-bed/css/custom.css
@@ -54,6 +54,7 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 	background-color:#FD9D2E;
 	background-size:cover;
 	color:#FFFFFF;
+	padding:2px;
 }
 .extole-button{
 	background-color:#515151;
